[varnish] icon and colours

--- a/varnish/package.yaml
+++ b/varnish/package.yaml
@@ -3,6 +3,6 @@ author: Dataloop.IO
 version: 1.0.0
 description: All of the metrics from the varnishstat command.
 icon:
-    name: linux
-    background: white
-    foreground: lightblue
+    name: varnish
+    background: black
+    foreground: cornflowerblue
