--- a/nginx/package.yaml
+++ b/nginx/package.yaml
@@ -2,6 +2,7 @@ title: Nginx
 author: Dataloop.IO
 version: 1.0.0
 description: Nginx http codes and response times. You will need to follow the instructions in nginx.py for setup.
+instructions_required: true
 icon:
     name: nginx
     background: green
