update instructions for docker, mysql and postgres

--- a/docker/package.yaml
+++ b/docker/package.yaml
@@ -2,6 +2,7 @@ title: Docker
 author: Dataloop.IO
 version: 1.0.0
 description: This pack requires the dataloop/dataloop-docker container to be started on each docker host.
+instructions_required: true
 icon:
     name: docker
     background: lightblue
