--- a/mysql/package.yaml
+++ b/mysql/package.yaml
@@ -2,6 +2,7 @@ title: MySQL
 author: Dataloop.IO
 version: 1.0.0
 description: MySQL monitoring. You may need to edit the mysql.py plugin to set username and password.
+instructions_required: true
 icon:
     name: mysql
     background: orange
