add redis process in package.yaml

--- a/redis/package.yaml
+++ b/redis/package.yaml
@@ -1,6 +1,8 @@
 title: Redis
 author: Dataloop.IO
 version: 1.0.0
+processes:
+    - redis
 description: Capacity and throughput metrics showing memory use, instantaneous operations and keyspace information.
 icon:
     name: redis
