more mongo and redis processes for auto discovery prod test

--- a/redis/package.yaml
+++ b/redis/package.yaml
@@ -3,6 +3,7 @@ author: Dataloop.IO
 version: 1.0.0
 processes:
     - redis
+    - redis-server
 description: Capacity and throughput metrics showing memory use, instantaneous operations and keyspace information.
 icon:
     name: redis
