--- a/mongodb/package.yaml
+++ b/mongodb/package.yaml
@@ -3,6 +3,7 @@ author: Dataloop.IO
 version: 1.0.1
 processes:
     - mongo
+    - mongod
 description: Every metric from mongostat
 icon:
     name: mongodb
