--- a/elasticsearch/dashboards/elasticsearch.yaml
+++ b/elasticsearch/dashboards/elasticsearch.yaml
@@ -1,45 +1,125 @@
 title: ElasticSearch
-period: 600
+period: 3600
+locked: false
 positions:
+  - title: search queries per second
+    data_type: number
+    type: stacked-chart
+    color: orange
+    icon: true
+    filter: avg
+    legend: false
+    row: 1
+    col: 1
+    size_x: 2
+    size_y: 2
+    series:
+      - metric: elasticsearch.indices.search.queries_per_second
+        scope:
+          tag: elasticsearch
+  - title: average index time in millis
+    data_type: number
+    type: stacked-chart
+    color: yellow
+    icon: true
+    filter: avg
+    legend: false
+    row: 1
+    col: 3
+    size_x: 2
+    size_y: 2
+    series:
+      - metric: elasticsearch.indices.indexing.index_time_avg_in_millis
+        scope:
+          tag: elasticsearch
+  - title: elasticsearch.indices.search.query_time_avg_in_millis
+    data_type: number
+    type: stacked-chart
+    color: fuchsia
+    icon: true
+    filter: avg
+    legend: false
+    row: 1
+    col: 5
+    size_x: 2
+    size_y: 2
+    series:
+      - metric: elasticsearch.indices.search.query_time_avg_in_millis
+        scope:
+          tag:
+            - elasticsearch
+            - data
   - title: no. of nodes
     type: number
     color: green
-    row: 1
-    col: 1
-    size_x: 1
-    size_y: 1
+    icon: true
     symbol: globe
     filter: max
     legend: false
-    icon: true
+    row: 3
+    col: 1
+    size_x: 1
+    size_y: 1
     series:
       - metric: elasticsearch.number_of_nodes
+        scope:
+          tag: elasticsearch
+  - title: relocating shards
+    type: number
+    color: aqua
+    icon: true
+    symbol: spinner
+    filter: avg
+    legend: false
+    row: 3
+    col: 2
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: elasticsearch.relocating_shards
         scope:
           tag: elasticsearch
   - title: active primary shards
     type: number
     color: navy
-    row: 1
-    col: 2
+    icon: true
+    symbol: smile-o
+    filter: avg
+    legend: false
+    row: 3
+    col: 3
     size_x: 1
     size_y: 1
-    symbol: smile-o
-    legend: false
-    icon: true
     series:
       - metric: elasticsearch.active_primary_shards
+        scope:
+          tag: elasticsearch
+  - title: unassigned shards
+    type: number
+    color: teal
+    icon: true
+    symbol: meh-o
+    filter: avg
+    legend: false
+    row: 3
+    col: 4
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: elasticsearch.unassigned_shards
         scope:
           tag: elasticsearch
   - title: active shards
     type: number
     color: blue
-    row: 1
-    col: 3
+    icon: true
+    symbol: star-o
+    filter: avg
+    legend: false
+    row: 3
+    col: 5
     size_x: 1
     size_y: 1
-    symbol: star-o
-    legend: false
-    icon: true
     series:
       - metric: elasticsearch.active_shards
         scope:
@@ -48,69 +128,28 @@ positions:
     data_type: nagios
     type: status
     color: aqua
-    row: 1
-    col: 4
-    size_x: 3
-    size_y: 2
-    legend: false
     icon: true
+    filter: avg
+    legend: false
+    row: 3
+    col: 6
+    size_x: 1
+    size_y: 1
     series:
       - metric: elasticsearch.status
-        scope:
-          tag: elasticsearch
-  - title: relocating shards
-    type: number
-    color: aqua
-    row: 2
-    col: 1
-    size_x: 1
-    size_y: 1
-    symbol: spinner
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.relocating_shards
-        scope:
-          tag: elasticsearch
-  - title: unassigned shards
-    type: number
-    color: teal
-    row: 2
-    col: 2
-    size_x: 1
-    size_y: 1
-    symbol: meh-o
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.unassigned_shards
-        scope:
-          tag: elasticsearch
-  - title: initialising shards
-    type: number
-    color: olive
-    row: 2
-    col: 3
-    size_x: 1
-    size_y: 1
-    symbol: magic
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.initializing_shards
         scope:
           tag: elasticsearch
   - title: 'JVM Heap Used %'
     data_type: number
     type: chart
     color: fuchsia
-    row: 3
-    col: 1
-    size_x: 6
-    size_y: 2
-    legend: false
     icon: true
     filter: avg
+    legend: false
+    row: 4
+    col: 1
+    size_x: 6
+    size_y: 1
     series:
       - metric: elasticsearch.jvm.mem.heap_used_percent
         scope:
@@ -118,69 +157,76 @@ positions:
   - title: load average
     type: chart
     color: green
+    icon: true
+    filter: avg
+    legend: false
     row: 5
     col: 1
     size_x: 3
     size_y: 2
-    legend: false
-    icon: true
-    filter: avg
     series:
       - metric: base.load_1_min
         scope:
           tag: elasticsearch
-  - title: disk available
+  - title: 'base.disk./.free_gb, base.disk./mnt.free_gb'
     data_type: number
     type: number
     color: maroon
+    icon: false
+    symbol: archive
+    filter: sum
+    legend: false
     row: 5
     col: 4
     size_x: 1
     size_y: 1
-    symbol: archive
-    legend: false
-    icon: false
     series:
       - metric: base.disk./.free_gb
         scope:
           tag: elasticsearch
-  - title: fs total disk io ops
-    type: number
-    color: fuchsia
-    row: 5
-    col: 5
-    size_x: 1
-    size_y: 1
-    legend: false
-    icon: true
-    symbol: hdd-o
-    series:
-      - metric: elasticsearch.fs.total.disk_io_op
+      - metric: base.disk./mnt.free_gb
         scope:
           tag: elasticsearch
   - title: field data memory size
     type: number
     color: purple
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 5
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: elasticsearch.indices.fielddata.memory_size_in_bytes
+        scope:
+          tag: elasticsearch
+  - title: indexing total
+    type: number
+    color: aqua
+    icon: false
+    symbol: spinner
+    filter: avg
+    legend: false
     row: 5
     col: 6
     size_x: 1
     size_y: 1
-    legend: false
-    icon: true
     series:
-      - metric: elasticsearch.indices.fielddata.memory_size_in_bytes
+      - metric: elasticsearch.indices.indexing.index_total
         scope:
           tag: elasticsearch
   - title: query total
     type: number
     color: orange
+    icon: false
+    symbol: question
+    filter: avg
+    legend: false
     row: 6
     col: 4
     size_x: 1
     size_y: 1
-    symbol: question
-    legend: false
-    icon: false
     series:
       - metric: elasticsearch.indices.search.query_total
         scope:
@@ -188,28 +234,30 @@ positions:
   - title: merges total size
     type: number
     color: blue
+    icon: false
+    symbol: random
+    filter: avg
+    legend: false
     row: 6
     col: 5
     size_x: 1
     size_y: 1
-    symbol: random
-    legend: false
-    icon: false
     series:
       - metric: elasticsearch.indices.merges.total_size_in_bytes
         scope:
           tag: elasticsearch
-  - title: indexing total
+  - title: initialising shards
     type: number
-    color: aqua
+    color: olive
+    icon: true
+    symbol: magic
+    filter: avg
+    legend: false
     row: 6
     col: 6
     size_x: 1
     size_y: 1
-    symbol: spinner
-    legend: false
-    icon: false
     series:
-      - metric: elasticsearch.indices.indexing.index_total
+      - metric: elasticsearch.initializing_shards
         scope:
           tag: elasticsearch
