--- a/nginx/package.yaml
+++ b/nginx/package.yaml
@@ -1,6 +1,8 @@
 title: Nginx
 author: Dataloop.IO
 version: 1.0.1
+processes:
+    - nginx
 description: Nginx http codes and response times. You will need to follow the instructions in nginx.py for setup.
 instructions_required: true
 icon:
