adds mysql process

--- a/mysql/package.yaml
+++ b/mysql/package.yaml
@@ -1,6 +1,8 @@
 title: MySQL
 author: Dataloop.IO
 version: 1.0.1
+processes:
+    - mysqld
 description: MySQL monitoring. You may need to edit the mysql.py plugin to set username and password.
 instructions_required: true
 icon:
