add elasticsearch process

--- a/elasticsearch/package.yaml
+++ b/elasticsearch/package.yaml
@@ -1,6 +1,8 @@
 title: ElasticSearch
 author: Dataloop.IO
 version: 1.0.1
+processes:
+    - elasticsearch
 description: Queries the stats and health endpoints for all Elastic Search metrics
 icon:
     name: elasticsearch
