--- a/rabbitmq/package.yaml
+++ b/rabbitmq/package.yaml
@@ -1,6 +1,8 @@
 title: RabbitMQ
 author: Dataloop.IO
 version: 1.0.0
+processes:
+    - rabbitmq-server
 description: Scrapes the management plugin to return overview statistics. Optionally returns queue and exchange level statistics.
 instructions_required: true
 icon:
