--- a/apache2/dashboards/apache-2.yaml
+++ b/apache2/dashboards/apache-2.yaml
@@ -63,11 +63,26 @@ positions:
       - metric: apache2.connstotal
         scope:
           tag: apache2
-  - title: Idle Workers
+  - title: Uptime (seconds)
+    data_type: number
+    type: number
+    color: teal
+    icon: false
+    filter: max
+    legend: false
+    row: 1
+    col: 5
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.serveruptimeseconds
+        scope:
+          tag: apache2
+  - title: 1 Minute Load
     data_type: number
     type: detailed-chart
-    color: maroon
-    icon: true
+    color: teal
+    icon: false
     filter: avg
     legend: false
     row: 2
@@ -75,67 +90,67 @@ positions:
     size_x: 2
     size_y: 1
     series:
-      - metric: apache2.idleworkers
+      - metric: apache2.load1
         scope:
           tag: apache2
-  - title: apache2.busyworkers
+  - title: Bytes Per Request
     data_type: number
     type: detailed-chart
-    color: maroon
+    color: fuchsia
     icon: true
     filter: avg
     legend: false
     row: 2
     col: 3
     size_x: 2
-    size_y: 1
+    size_y: 2
     series:
-      - metric: apache2.busyworkers
+      - metric: apache2.bytesperreq
+        scope:
+          tag: apache2
+  - title: Bytes Per Second
+    data_type: number
+    type: detailed-chart
+    color: fuchsia
+    icon: true
+    filter: avg
+    legend: false
+    row: 2
+    col: 5
+    size_x: 2
+    size_y: 2
+    series:
+      - metric: apache2.bytespersec
         scope:
           tag: apache2
   - title: Requests Per Second
     data_type: number
-    type: chart
+    type: detailed-chart
     color: fuchsia
     icon: true
     filter: avg
     legend: false
     row: 3
     col: 1
-    size_x: 4
-    size_y: 1
+    size_x: 2
+    size_y: 2
     series:
       - metric: apache2.reqpersec
         scope:
           tag: apache2
-  - title: Bytes Per Second
+  - title: Scoreboard Waiting
     data_type: number
-    type: chart
-    color: fuchsia
-    icon: true
-    filter: avg
+    type: number
+    color: navy
+    icon: false
+    filter: max
     legend: false
     row: 4
-    col: 1
-    size_x: 4
+    col: 3
+    size_x: 1
     size_y: 1
     series:
-      - metric: apache2.bytespersec
-        scope:
-          tag: apache2
-  - title: Bytes Per Request
-    data_type: number
-    type: chart
-    color: fuchsia
-    icon: true
-    filter: avg
-    legend: false
-    row: 5
-    col: 1
-    size_x: 4
-    size_y: 1
-    series:
-      - metric: apache2.bytesperreq
+      - metric: apache2.stats.waiting
         scope:
           tag: apache2
   - title: Scoreboard Total
@@ -145,12 +160,147 @@ positions:
     icon: false
     filter: max
     legend: false
+    row: 4
+    col: 4
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.total
+        scope:
+          tag: apache2
+  - title: Scoreboard Reading
+    data_type: number
+    type: number
+    color: navy
+    icon: false
+    filter: max
+    legend: false
+    row: 4
+    col: 5
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.reading
+        scope:
+          tag: apache2
+  - title: Scoreboard Closing
+    data_type: number
+    type: number
+    color: navy
+    icon: false
+    filter: max
+    legend: false
+    row: 4
+    col: 6
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.closing
+        scope:
+          tag: apache2
+  - title: Scoreboard Keepalive(read)
+    data_type: number
+    type: number
+    color: navy
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 1
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.keepalive
+        scope:
+          tag: apache2
+  - title: Scoreboard DNSLookUp
+    data_type: number
+    type: number
+    color: navy
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 2
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.dnslookup
+        scope:
+          tag: apache2
+  - title: Scoreboard Sending
+    data_type: number
+    type: number
+    color: blue
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 3
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.sending
+        scope:
+          tag: apache2
+  - title: Scoreboard Finishing
+    data_type: number
+    type: number
+    color: blue
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 4
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.finishing
+        scope:
+          tag: apache2
+  - title: Scoreboard Starting
+    data_type: number
+    type: number
+    color: blue
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 5
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.starting
+        scope:
+          tag: apache2
+  - title: Scoreboard Idle Cleanup
+    data_type: number
+    type: number
+    color: blue
+    icon: false
+    filter: max
+    legend: false
+    row: 5
+    col: 6
+    size_x: 1
+    size_y: 1
+    series:
+      - metric: apache2.stats.idle_cleanup
+        scope:
+          tag: apache2
+  - title: Scoreboard Logging
+    data_type: number
+    type: number
+    color: blue
+    icon: false
+    filter: max
+    legend: false
     row: 6
     col: 1
     size_x: 1
     size_y: 1
     series:
-      - metric: apache2.stats.total
+      - metric: apache2.stats.logging
         scope:
           tag: apache2
   - title: Scoreboard Open
@@ -168,40 +318,10 @@ positions:
       - metric: apache2.stats.open
         scope:
           tag: apache2
-  - title: Scoreboard Waiting
+  - title: Idle Workers
     data_type: number
     type: number
-    color: navy
-    icon: false
-    filter: max
-    legend: false
-    row: 6
-    col: 3
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.waiting
-        scope:
-          tag: apache2
-  - title: Uptime (seconds)
-    data_type: number
-    type: number
-    color: teal
-    icon: false
-    filter: max
-    legend: false
-    row: 6
-    col: 4
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.serveruptimeseconds
-        scope:
-          tag: apache2
-  - title: Scoreboard Starting
-    data_type: number
-    type: number
-    color: blue
+    color: maroon
     icon: false
     filter: max
     legend: false
@@ -210,13 +330,13 @@ positions:
     size_x: 1
     size_y: 1
     series:
-      - metric: apache2.stats.starting
+      - metric: apache2.idleworkers
         scope:
           tag: apache2
-  - title: Scoreboard Reading
+  - title: apache2.busyworkers
     data_type: number
     type: number
-    color: navy
+    color: maroon
     icon: false
     filter: max
     legend: false
@@ -225,156 +345,6 @@ positions:
     size_x: 1
     size_y: 1
     series:
-      - metric: apache2.stats.reading
-        scope:
-          tag: apache2
-  - title: Scoreboard Sending
-    data_type: number
-    type: number
-    color: blue
-    icon: false
-    filter: max
-    legend: false
-    row: 7
-    col: 3
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.sending
-        scope:
-          tag: apache2
-  - title: 1 Minute Load
-    data_type: number
-    type: chart
-    color: teal
-    icon: true
-    filter: avg
-    legend: false
-    row: 7
-    col: 4
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.load1
-        scope:
-          tag: apache2
-  - title: Scoreboard Keepalive(read)
-    data_type: number
-    type: number
-    color: navy
-    icon: false
-    filter: max
-    legend: false
-    row: 8
-    col: 1
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.keepalive
-        scope:
-          tag: apache2
-  - title: Scoreboard Finishing
-    data_type: number
-    type: number
-    color: blue
-    icon: false
-    filter: max
-    legend: false
-    row: 8
-    col: 2
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.finishing
-        scope:
-          tag: apache2
-  - title: Scoreboard Closing
-    data_type: number
-    type: number
-    color: navy
-    icon: false
-    filter: max
-    legend: false
-    row: 8
-    col: 3
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.closing
-        scope:
-          tag: apache2
-  - title: 5 Minute Load
-    data_type: number
-    type: chart
-    color: teal
-    icon: true
-    filter: avg
-    legend: false
-    row: 8
-    col: 4
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.load5
-        scope:
-          tag: apache2
-  - title: Scoreboard Logging
-    data_type: number
-    type: number
-    color: blue
-    icon: false
-    filter: max
-    legend: false
-    row: 9
-    col: 1
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.logging
-        scope:
-          tag: apache2
-  - title: Scoreboard DNSLookUp
-    data_type: number
-    type: number
-    color: navy
-    icon: false
-    filter: max
-    legend: false
-    row: 9
-    col: 2
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.dnslookup
-        scope:
-          tag: apache2
-  - title: Scoreboard Idle Cleanup
-    data_type: number
-    type: number
-    color: blue
-    icon: false
-    filter: max
-    legend: false
-    row: 9
-    col: 3
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.stats.idle_cleanup
-        scope:
-          tag: apache2
-  - title: 15 Minute Load
-    data_type: number
-    type: chart
-    color: teal
-    icon: true
-    filter: avg
-    legend: false
-    row: 9
-    col: 4
-    size_x: 1
-    size_y: 1
-    series:
-      - metric: apache2.load15
+      - metric: apache2.busyworkers
         scope:
           tag: apache2
