--- a/apache2/package.yaml
+++ b/apache2/package.yaml
@@ -1,12 +1,12 @@
 title: Apache2
 author: Dataloop.IO
-version: 1.0.0
+version: 1.0.1
 processes:
     - apache2
-description: Apache2 metrics from mod-status. You will need to follow the instructions in apache2.py for setup.
+description: Apache2 metrics from the mod-status module. Instructions contain configuration steps.
 instructions_required: true
 icon:
     name: apache
-    background: red
+    background: "#DB3D7C"
     foreground: white
 
