add autoscaling pack template and update icons

--- a/kinesis/package.yaml
+++ b/kinesis/package.yaml
@@ -3,6 +3,6 @@ author: Dataloop.IO
 version: 1.0.0
 description: Dashboards and alert rules for kinesis monitored with the AWS integration
 icon:
-    name: aws
+    name: kinesis
     background: orange
     foreground: white
