[ec2] alert on mx value
count returns datapoint counts. max is the top value for this metric

--- a/ec2/rules/ec2.yaml
+++ b/ec2/rules/ec2.yaml
@@ -1,6 +1,6 @@
 title: ec2
 criteria:
-  - metric: aws.ec2.status_check_failed_system.count
+  - metric: aws.ec2.status_check_failed_system.max
     scope:
       tag: ec2
     condition:
