--- a/route53/package.yaml
+++ b/route53/package.yaml
@@ -3,6 +3,6 @@ author: Dataloop.IO
 version: 1.0.0
 description: Dashboards and alert rules for route 53 DNS health checks monitored with the AWS integration
 icon:
-    name: autoscaling
+    name: route53
     background: orange
     foreground: white
