--- a/sqs/package.yaml
+++ b/sqs/package.yaml
@@ -3,6 +3,6 @@ author: Dataloop.IO
 version: 1.0.0
 description: Dashboards and alert rules for SQS queues monitored with the AWS integration
 icon:
-    name: autoscaling
+    name: sqs
     background: orange
     foreground: white
