--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -17,3 +17,8 @@ services:
       - MYSQL_ROOT_PASSWORD=pass
     ports:
       - "3306:3306"
+
+  redis:
+    image: redis:3.0.7
+    ports:
+      - "6379:6379"
