--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -22,3 +22,9 @@ services:
     image: redis:3.0.7
     ports:
       - "6379:6379"
+
+  elasticsearch:
+    image: elasticsearch:5.2.0
+    ports:
+      - "9200:9200"
+      - "9300:9300"
